# Vocalize

./: LICENSE  README.md
micinput-vst/: CMakeLists.txt  build.bat  install.bat
micinput-vst/src/audio/: AudioRingBuffer.h  DeviceProber.h  ThreadOptimizer.h  WasapiCapture.cpp  WasapiCapture.h
micinput-vst/src/gui/: Colours.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h
micinput-vst/src/gui/components/: LevelMeter.cpp  LevelMeter.h  ModeSelector.cpp  ModeSelector.h  StatCard.cpp  StatCard.h
micinput-vst/src/plugin/: Parameters.h  PluginProcessor.cpp  PluginProcessor.h
